Some updates. See below
- Added an option to shift all records or only those of selected app.
- Fixed the functionality to put adittional data files.
- Added a JS function to disable all checkboxes during an ajax call when clicking one.

--- a/src/classes/TimeShiftingBatch.cls
+++ b/src/classes/TimeShiftingBatch.cls
@@ -6,11 +6,18 @@ global class TimeShiftingBatch implements Database.Batchable<sObject>, Database.
 	String query;
 	
 	// Constructor
-	global TimeShiftingBatch(String objectTypeName, List<String> dateFieldNames, Integer daysToShift) {
+	global TimeShiftingBatch(String objectTypeName, List<String> dateFieldNames, Integer daysToShift, String externalIdPrefix) {
 		try{
 			this.objectType = Schema.getGlobalDescribe().get(objectTypeName);
 			this.dateFieldNames = dateFieldNames;
-			this.query = 'SELECT ' + String.join(dateFieldNames, ',') + ' FROM ' + objectTypeName + ' WHERE External_Id__c != null';
+			
+			String whereClause = ' WHERE External_Id__c != null';
+
+			if(String.isNotBlank(externalIdPrefix)){
+				whereClause = ' WHERE External_ID__c LIKE \'' + externalIdPrefix + '%\'';
+			}
+			
+			this.query = 'SELECT ' + String.join(dateFieldNames, ',') + ' FROM ' + objectTypeName + whereClause;			
 			this.daysToShift = daysToShift;
 
 			if(this.daysToShift == 0){
